--- a/myvalue-produccion.yml
+++ b/myvalue-produccion.yml
@@ -1,2 +1,7 @@
 product:
   product-name: Zapatillas de Deporte en producción
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
