--- a/myvalue-test.yml
+++ b/myvalue-test.yml
@@ -1,6 +1,9 @@
 product:
   product-name: Zapatillas de Deporte en Test
 management:
+  endpoint:
+    refresh:
+      enabled: true
   endpoints:
     web:
       exposure:
