--- a/myvalue.yml
+++ b/myvalue.yml
@@ -1,6 +1,9 @@
 product:
   product-name: Zapatillas de Deporte
 management:
+  endpoint:
+    refresh:
+      enabled: true
   endpoints:
     web:
       exposure:
